# langgraph-agentic-systems

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.claude/: settings.local.json
01_agentic_foundations/01_generative_vs_agentic/: from_generative_to_agentic_ai.md
01_agentic_foundations/02_agentic_ai_overview/: agentic_ai_fundamentals.md
01_agentic_foundations/03_langchain_vs_langgraph/: langchain_vs_langgraph_agent_workflows.md
02_langgraph_workflows/01_langgraph_core/: langgraph_core_concepts_state_execution.md
02_langgraph_workflows/02_sequential_workflows/: sequential_workflows_note_generator.md
02_langgraph_workflows/02_sequential_workflows/backend/: __init__.py  app.py  llm.py  nodes.py  prompts.py  schemas.py  state.py  workflow.py
02_langgraph_workflows/02_sequential_workflows/frontend/: index.html
02_langgraph_workflows/02_sequential_workflows/notebook/: 01_bmi_calculation.ipynb  02_simple_llm.ipynb  03_prompt_chaining.ipynb
02_langgraph_workflows/03_parallel_workflows/cricket_performance_engine/backend/: __init__.py  app.py  config.py  llm.py  nodes.py  prompts.py  reducers.py  schemas.py  state.py  workflow.py
02_langgraph_workflows/03_parallel_workflows/cricket_performance_engine/frontend/: index.html  main.js  style.css
02_langgraph_workflows/03_parallel_workflows/writing_assessment_engine/: README.md  sample_texts.txt
02_langgraph_workflows/03_parallel_workflows/writing_assessment_engine/backend/: app.py  (+9 more)
02_langgraph_workflows/04_conditional_workflows/ai-feedback-triage-agent/: README.md  main.py  requirements.txt
(+38 files in other folders)
